added update and delete POST, made gui compatible for sessions, fixed display bugs

--- a/Phase2/views/partials/header.hbs
+++ b/Phase2/views/partials/header.hbs
@@ -5,5 +5,6 @@
     <div class="subnav buttons">
         <input type="button" onclick="location.href='/api/user/login'" value="Login">
         <input type="button" onclick="location.href='/api/user/register'" value="Register">
+        <input type="button" onclick="window.location.href='/api/post/getPost'" value="Main">
     </div>
 </navbar>
