--- a/Phase2/views/partials/header_logged.hbs
+++ b/Phase2/views/partials/header_logged.hbs
@@ -3,6 +3,7 @@
     <img src = "https://static.miraheze.org/houkai2ndwiki/thumb/0/06/MiHoYo_O_logo.webp/739px-MiHoYo_O_logo.webp.png"/>
     <div class="subnav buttons">
         <input type="button" onclick="window.location.href='/api/user/profile'" value="Profile">
-        <input type="button" onclick="location.href='/api/user/login'" value="logout">
+        <input type="button" onclick="location.href='/logout'" value="logout">
+        <input type="button" onclick="window.location.href='/api/post/getPost'" value="Main">
     </div>
 </navbar>
