--- a/Phase2/views/main_page.hbs
+++ b/Phase2/views/main_page.hbs
@@ -40,15 +40,19 @@
         <div style="display: flex; justify-content: space-between;">
             <span class="title-post"><strong>{{p_title}}</strong></span>
         </div>
-        <span class="user-post">{{p_u_OID.u_username}}</span>
+        <div>
+            <span class="user-post">{{p_u_OID.u_username}}</span>
+            {{#if p_has_been_edited}}
+                <span class="user-post" style="color:gray">Edited</span>
+            {{/if}}
+        </div>
         <div class="date-post"><strong>{{p_date}}</strong></div>
         <div class="description-post">{{p_body}}<br><br></div>
         <div class="tags"><button style="margin-right:10px;">{{p_tags}}</button></div>
         <div class="img-div-post"><img src="/{{p_image.p_filepath}}" class="img-post"></div>
         <br>
-        {{#if ../login_id}}
             <input type="button" onclick="navigateToPostPageLogged('{{_id}}')" value="See More">
-        {{/if}}
+
             <i class="fa-solid fa-thumbs-up upvote-icon"></i>
             <span class="downvote-count">{{upvotes}}</span>
             <i class="fa-solid fa-thumbs-down downvote-icon"></i>
@@ -64,9 +68,9 @@
             <form class="create-post-form" name="create-post-form" action="/api/post/createPost" method="POST" enctype="multipart/form-data">
                 <div class = "close-btn" onclick="hidePopup()">&times;</div>
                 <label>Title</label>
-                <input type="text" placeholder="Enter Title" class="create-select-tag" style="width:50%" name="title">
+                <input type="text" placeholder="Enter Title" class="create-select-tag" style="width:50%" name="title" required>
                 <label>Tag</label>
-                    <select style="width:50%" name="tags">
+                    <select style="width:50%" name="tags" required>
                         <option>Genshin Impact</option>
                         <option>Honkai Star Rail</option>
                         <option>Honkai Impact</option>
@@ -75,8 +79,8 @@
                     </select>
                 <label>Content</label>
                 <!--<input type="hidden" name="id" value={{login_id}}>  this is hardcoded for now sir said since ala pa sessions User A-->
-                <textarea class="create-post-textarea" name="body"></textarea>
-                <input type="file" style="width:50%" name="image">
+                <textarea class="create-post-textarea" name="body" required></textarea>
+                <input type="file" style="width:50%" name="image" required>
                 <input type="submit" value="submit">
             </form>
         </div>
