added dynamic react, change username to displayname when displaying name

--- a/Phase2/views/main_page.hbs
+++ b/Phase2/views/main_page.hbs
@@ -41,7 +41,7 @@
             <span class="title-post"><strong>{{p_title}}</strong></span>
         </div>
         <div>
-            <span class="user-post">{{p_u_OID.u_username}}</span>
+            <span class="user-post">{{p_u_OID.u_displayname}}</span>
             {{#if p_has_been_edited}}
                 <span class="user-post" style="color:gray">Edited</span>
             {{/if}}
