--- a/Phase2/views/post_page.hbs
+++ b/Phase2/views/post_page.hbs
@@ -18,7 +18,7 @@
                 {{/if}}
 
                 <div class="authorTextContainer">
-                    <p class="authorName">{{postdetails.p_u_OID.u_username}}</p>
+                    <p class="authorName">{{postdetails.p_u_OID.u_displayname}}</p>
                     <p class="dateText">{{postdetails.p_date}}</p>
                 </div>
             </div>
